        PR c++/35319         * mangle.c (write_builtin_type): Add mangling for decimal floating         point and fixed point types.         (write_type): Pass FIXED_POINT_TYPE along.         * cp-demangle.c (cplus_demangle_type): Support fixed-point types.         (d_print_comp, d_dump): Likewise.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@142661 138bc75d-0d04-0410-961f-82ee72b054a4