gcc/testsuite/g++.dg/ext/fixed2.C
@@ -1,0 +1,7 @@
+// PR c++/35319
+// { dg-options "" }
+
+void foo()
+{
+  throw 0r;
+}
